[package]
name = "fourmeme-bot"
version = "1.0.0"
edition = "2021"
authors = ["four.meme devs"]
description = "four.meme Volume & Sniper Bot — BNB Chain meme automation toolkit"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tokio = { version = "1", features = ["full"] }
